manifests/registry/component/keycloak/postgres-keycloak.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: postgres-keycloak
spec:
  type: ClusterIP
  ports:
  - name: pg-keycloak
    port: 5432
    protocol: TCP
    targetPort: pg-keycloak
  selector:
    statefulset: postgres-keycloak

---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres-keycloak
spec:
  replicas: 1
  selector:
    matchLabels:
      statefulset: postgres-keycloak
  serviceName: postgres-keycloak
  updateStrategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        statefulset: postgres-keycloak
    spec:
      containers:
      - name: postgres
        # image: postgres:11.1
        image: quay.io/centos7/postgresql-12-centos7:1
        livenessProbe:
          exec:
            command: ["sh", "-c", "exec pg_isready --host $POD_IP"]
          failureThreshold: 6
          initialDelaySeconds: 120
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 5
        ports:
        - containerPort: 5432
          name: pg-keycloak
          protocol: TCP
        readinessProbe:
          exec:
            command: [ "sh", "-c", "exec pg_isready --host $POD_IP" ]
          failureThreshold: 3
          initialDelaySeconds: 5
          periodSeconds: 5
          successThreshold: 1
          timeoutSeconds: 3
        resources:
          limits:
            cpu: 300m
            memory: 1000Mi
        volumeMounts:
        - mountPath: /var/lib/postgresql/data
          name: postgres-keycloak-volume
      volumes:
        - name: postgres-keycloak-volume
          persistentVolumeClaim:
            claimName: postgres-keycloak-claim
