manifests/registry/component/keycloak/keycloak-server.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: keycloak-server
spec:
  type: ClusterIP
  ports:
  - name: https 
    port: 443
    protocol: TCP
    targetPort: https
  selector:
    statefulset: keycloak-server


---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: keycloak-server
spec:
  replicas: 1
  selector:
    matchLabels:
      statefulset: keycloak-server
  serviceName: keycloak-server
  updateStrategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        statefulset: keycloak-server
    spec:
      containers:
      - name: keycloak
        image: jboss/keycloak:13.0.1
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /auth/
            port: http
            scheme: HTTP
          initialDelaySeconds: 120
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 5
        resources:
          limits:
            cpu: 400m
            memory: 1000Mi
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        - containerPort: 8443
          name: https
          protocol: TCP
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /auth/
            port: http
            scheme: HTTP
          initialDelaySeconds: 30
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        securityContext:
          privileged: false
      restartPolicy: Always
      terminationGracePeriodSeconds: 60
  # volumeClaimTemplates:
  # - metadata:
  #     labels:
  #       app.kubernetes.io/part-of: keycloak
  #     name: data
  #   spec:
  #     accessModes:
  #     - ReadWriteOnce
  #     resources:
  #       requests:
  #         storage: 1Gi
  #     storageClassName: standard
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: keycloak-server
spec:
  # host: 'keycloak-server-apicurio-apicurio-registry.apps.zero.massopen.cloud'
  tls:
    termination: passthrough
  to:
    kind: Service
    name: keycloak-server
    weight: 100
  wildcardPolicy: None
